style.css
:root{
  --main-color: #1F1F1F;
  --secundary-color: #8695A4;
  --title-color: #FFFFFF;
  --text-color: #BAC1C3;
  --details-color: #767676;
}

*{
  margin: 0;
  padding: 0;
}

body{
  height: 100%;
  width: 100%;

  background-color: var(--main-color);
  font-family: 'Heebo', sans-serif;
}

/*HEADER - ABOUT*/
.about{
  display: flex;
  margin: 10%;
  flex-direction: row-reverse;

  align-items: center;
  text-align: center;
}

.about .text{
  margin-top: 27px;
  font-weight: 400;

  text-align: left;
}

.text button{ 
  width: 208px;
  height: 50px;
  margin-top: 27px;

  color: var(--title-color);
  font-weight: 500;
  font-size: 18px;

  border: none;
  border-radius: 4px;
  background-color: var(--secundary-color);
}

.text button:hover{
  background-color: var(--main-color);
  border: solid 2px var(--title-color);
  color: var(--title-color);
  transition-duration: 800ms;
  
  cursor: pointer;
}

sup, sub{
  font-size: 24px;
  font-family: 'Gochi Hand';
  color: var(--details-color);
}

.pcard img{
  width: 120px;
}

.projects .cards .pcard{
  display: flex;
  width: 210px;
  height: 220px;
  margin: 5% 3% 0% 3%;
  
  align-items: center;
  justify-content: center;
  
  border-radius: 10px;

  background-color: var(--details-color);
  opacity: 0.5;
}

.projects .cards .pcard:hover{
  cursor: pointer;

  background-color: #FFFFFF;
  opacity: 1;
  transition-duration: 800ms;
}

/*CARDS BACKGROUND COLOR*/
#card1, #card3{
  background-color: #FFFFFF;
}
#card2{
  background-color: #04D361;
}
#card2 img{
  margin-left: 20px;
}
#card4{
  background-color: #0077B7;
}

/*SECTION 2 - HABILITIES*/
#habilities{
  display: flex; 
  margin-top: 10%;
  flex-direction: column;
}

#habilities img{
  margin-top: 5%;
  width: 60%;

  align-self:center;
  justify-self: center;
}

/*FOOTER*/
footer{
  display: flex;
  flex-direction: column;

  margin-top: 10%;
  padding: 0 10% 0 10%;
  height: 200px;

  background-color: var(--title-color);

  align-items: center;
  justify-content: center;
}

footer .social_media{
  display: flex;

  justify-content: space-evenly;
  text-align: center;
  align-items: center;
}

.social_media a{
  text-decoration: none;
}

.social_media img{
  width: 30px;
  padding: 0 1em;
}

footer small{
  padding-top: 2%;
  color: var(--main-color);
  text-align: center;
}

/*DESKTOP*/
@media (min-width:800px){

  .about{
    margin-top: 5%;
  }

  .about .picture{
    display: flex;
    justify-content: right;
  }

  .about .picture img{
    max-width: 400px;
    text-align: right;

    border-radius: 4px 50px 20px 80px;
    box-shadow: 30px 20px 0px 1px var(--secundary-color);

  }

  h2{
    color: var(--title-color);
  
    font-size: 3.5vw;
    font-weight: bold;
  }
  
  p{
    margin-top: 20px;
    color: var(--text-color);
  
    font-size: 1.5vw;
    font-weight: 400;
  }
  
  /*NAV BAR*/
  nav{
    display: flex;
    width: 600px;
    padding-top: 5%;
    margin-left: 10%;
    top: 100px;
  
    align-items: left;
  }

  #menu ul li{
    padding: 0% 5%;
  }

  .about .picture{
    width: 70%;
  }

  .picture img{
    width: 60%;
  }

  section h2{
    padding-left: 10%;
  }

  .projects .cards{
    display: flex;

    align-items: center;
    justify-content: center;

    margin: 0% 5% 0% 5%;
  }

  .projects .cards .pcard{
    flex: 2;
  }
}


/*GENERAL*/
#btn_mobile{
  display: none;
  background-color: var(--main-color);
  border: none;
}

#btn_mobile:hover{
  cursor: pointer;
}

#menu a{
  color: var(--text-color);
}

ul{
  width: 50%;
  display: flex;
  justify-content: space-between;
}

nav ul li,a{
  text-decoration: none;
  list-style-type: none;
}


/*MOBILE*/
@media (max-width:800px){
  h2{
    color: var(--title-color);
    padding-left: 5%;
  
    font-size: 1.5em;
    font-weight: bold;
  }
  
  p{
    margin-top: 20px;
    color: var(--text-color);
  
    font-size: 16px;
    font-weight: 400;
  }

  .about{
    display: flex;
    flex-direction: column;
    margin: 10%;
  
    align-items: center;
    text-align: center;
  }

  #btn_mobile{
    display: block;
  }

  #btn_mobile img{
    padding: 50px 0px 0px 50px;
  }

  #menu{
    display: none;

    position: absolute;
    top: 10%;
  }

  #menu li{
    width: 70px;
    padding: 2%;
    background-color: var(--main-color);
  }

  #nav.active #menu{
    display: block;
  }

  .about .text{
    margin-top: 27px;
    font-weight: 400;
  
    text-align: center;
  }

  .projects .cards{
    display: flex;
    flex-direction: column;
    width: 100%;
  
    align-items: center;
  }

  .projects .cards .pcard{
    width: 210px;
    height: 130px;
  }
}

